--- a/idk.html
+++ b/idk.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>/pomodoro timer</title>
+    <title>kari's pomodoro timer</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,8 +16,11 @@
             <div class="timer">
                <h1 id="timer-display">25:00</h1>
             </div>
-            <div class="button-container">
+            <div>
                 <button id="start/pause-button" onclick="pomodoro()" class="button">start :></button>
+            </div>
+            <div class="button-container">
+                <button class="button">study :0</button>
                 <button onclick="shortBreak()" class="button">short break :)</button>
                 <button onclick="longBreak()" class="button">long break (woah.)</button>
             </div>
